[package]
name = "arc-ext"
description = "Extensions for Arc<T> such as field projection"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"

[dependencies]
async-graphql = { version = "4.0.16", optional = true }

[features]
default = ["async-graphql"]